# priorities

./: .gitignore  Cargo.toml
client/: Cargo.toml
db/: Cargo.toml
db/src/: lib.rs
service/: Cargo.toml
