[workspace]
resolver = "2"
members = ["db", "service", "client"]

[workspace.package]
authors = ["Travis Brown <travisrobertbrown@gmail.com>"]
homepage = "https://github.com/travisbrown/priorities"
repository = "https://github.com/travisbrown/priorities"
keywords = ["google", "apple", "scraper"]
edition = "2024"
license = "GPL-3.0-only"
version = "0.1.0"

[workspace.dependencies]
bincode = "2"
chrono = "0.4"
futures = "0.3"
http = "1"
log = "0.4"
rocksdb = { version = "0.24", features = ["zstd"] }
serde = { version = "1", features = ["derive"] }
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
