[package]
name = "priorities-db"
authors = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
bincode = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
log = { workspace = true }
rocksdb = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
